💅 Fix color when in dark mode

--- a/components/notification/notification.scss
+++ b/components/notification/notification.scss
@@ -30,5 +30,9 @@
 
   &--success {
     background-color: var(--success);
+
+    .dark & {
+      color: var(--white);
+    }
   }
 }
